# please-no-smoking

./: .gitattributes  .gitignore  CLAUDE.md  README.md  please-no-smoking.spec  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/skills/desktop-release-check/: SKILL.md
.claude/skills/minimal-diff-python-fix/: SKILL.md
.claude/skills/pyside6-widget-scaffold/: SKILL.md
.claude/skills/qt-test-writer/: SKILL.md
app/: main.py  models.py  tray.py  window.py
app/services/: persistence.py  quit_tracker.py
tests/: test_packaging.py  test_persistence.py  test_quit_tracker.py  test_tray.py  test_window.py
